style.css
/*This is where the CSS will go*/

html {
  background-color: #000000;
  overflow: hidden;
	height: 100%;
	width: 100%;
}

body{
	overflow: hidden;
	height: 100%;
	width: 100%;
}
 
.container {
  width: 100%;
  margin: 0 auto;
  z-index: 99;
}
 
.center {
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  flex-flow: column wrap;
  text-align: center;
}
 
header {
  width: 100%;
  z-index: 96;
}
 
footer {
  width: 100%;
  text-align: right;
  color: white;
  font-family: 'Amatic SC';
  font-size: 2.8vh;
  position: absolute;
  bottom: -1vh;
  right: 2vh;
  z-index: 95;
}
 
article {
  text-align: center;
}
 
li {
  display: block;
}
 
a {
  text-decoration: none;
}
 
h1, h2, h3, h4, p {
  color: white;
  display: block;
  z-index: 93;
}
 
h1 {
  margin: 0 .2em;
  font-size: 8vh;
  font-family: 'Amatic SC';
  display: none;
}
 
h2 {
  font-family: 'Annie Use Your Telescope', cursive;
  font-size: 3vh;
  position: relative;
  top: 0vh;
}

img {
  width: 68vh;
  z-index: 7;
}

form {
  padding-bottom: 1.6vh;
  z-index: 99;
}
 
.hide {
  display: none;
}
 
input {
  background-color: #222447;
  background: radial-gradient(circle, #0a0d35, #131428, #080c3f, #131428, #000000);
  background: webkit-radial-gradient(circle, #0a0d35, #131428, #080c3f, #131428, #000000);
  background: -moz-radial-gradient(circle, #0a0d35, #131428, #080c3f, #131428, #000000);
  background-size: 350%;
  -webkit-animation: juicy 10s ease infinite;
  -moz-animation: juicy 10s ease infinite;
  animation: juicy 10s ease infinite;
  height: 3vh;
  width: 27vh;
  color: white;
  text-align: center;
  font-family: 'Alegreya Sans SC', sans-serif;
  font-weight: bold;
  font-size: 2vh;
  border-top-color: #2a2f38;
  border-bottom-color: #9da7b7;
  border-right-color: #737c8c;
  border-left-color: #797e87;
  z-index: 99;
}
 
.circle {
  background-color: #222447;
  background: radial-gradient(circle, #0a0d35, #131428, #080c3f, #131428, #000000);
  background: webkit-radial-gradient(circle, #0a0d35, #131428, #080c3f, #131428, #000000);
  background: -moz-radial-gradient(circle, #0a0d35, #131428, #080c3f, #131428, #000000);
  background-size: 350%;
  -webkit-animation: juicy 10s ease infinite;
  -moz-animation: juicy 10s ease infinite;
  animation: juicy 10s ease infinite;
  height: 33.5vh;
  width: 33.5vh;
  border-radius: 75em;
  z-index: 98;
}
 
.light {
  height: 35.3vh;
  width: 35.3vh;
  z-index: 97;
  border-radius: 75em;
  background: linear-gradient(to bottom right, white, #141623);
}
 
.shadow {
  height: 38vh;
  width: 38vh;
  border-radius: 75em;
  border-style: solid;
  border color: black;
  border-width: .0;
  background: linear-gradient(to bottom left, #2b2d3a, #15161c);
  z-index: 96;
}
 
#answer {
  width:22vh;
  z-index: 99;
  position: relative;
  text-align: center;
  height: 0em;
  overflow: visible;
  top: -22vh;
}
 
#triangle {
  display: none;
  border-left: 13.2vh solid transparent;
  border-right: 13.2vh solid transparent;
  border-top: 24vh solid #0f33aa;
  border-radius: .3em;
  position: relative;
  height: 0em;
  width: 0em;
  overflow: visible;
  top: 3.3vh;
  z-index: 99;
}
 
/*These are "light" divs, made to make the background appear spherical and ball like */
 
.radial-white {
  width: 100vw;
  height: 100vw;
  border-radius: 75em;
  position: absolute;
  top: -30vh;
  left: -14vh;
  background: radial-gradient(circle, #ffffc9, transparent, transparent, transparent);
  opacity: .7;
  z-index: 100;
  pointer-events: none;
}
 
.radial-shine {
  position: absolute;
  top: -20vh;
  left: -24vw;
  width: 150vw;
  height: 150vh;
  background: radial-gradient(circle, #ffffc9, transparent, transparent);
  opacity: .2;
  z-index: 4;
}
 
.radial-back{
  position: absolute;
  top: -6vh;
  left: -24vw;
  width: 150vw;
  height: 150vh;
  background: radial-gradient(circle, #26241d, #11110a, transparent, transparent);
  z-index: 3;
}
 
/*This is the animation section*/
 
@-webkit-keyframes juicy {
  0%{background-position:100% 0%}
  50%{background-position:0% 100%}
  100%{background-position:100% 0%}
}
 
@-moz-keyframes juicy {
    0%{background-position:100% 0%}
    50%{background-position:0% 100%}
    100%{background-position:100% 0%}
}
@keyframes juicy {
    0%{background-position:0% 100%}
    50%{background-position:100% 0%}
    100%{background-position:0% 100%}
}
 
@-webkit-keyframes color{
    0% { color: transparent; text-shadow: .1em .1em transparent; }
    10% { color: transparent; text-shadow: .1em .1em transparent; }
    20% { color: transparent; text-shadow: .1em .1em transparent; }
    30% { color: transparent; text-shadow: .1em .1em transparent; }
    40% { color: transparent; text-shadow: .1em .1em transparent; }
    50% { color: transparent; text-shadow: .1em .1em transparent; }
    100% { color: #c0d5f7; text-shadow: .1em .1em #03132d;}
}
 
@-moz-keyframes color {
   0% { color: transparent; text-shadow: .1em .1em transparent; }
    10% { color: transparent; text-shadow: .1em .1em transparent; }
    20% { color: transparent; text-shadow: .1em .1em transparent; }
    30% { color: transparent; text-shadow: .1em .1em transparent; }
    40% { color: transparent; text-shadow: .1em .1em transparent; }
    50% { color: transparent; text-shadow: .1em .1em transparent; }
    100% { color: #c0d5f7; text-shadow: .1em .1em #03132d;}
}
 
@keyframes color {
    0% { color: transparent; text-shadow: .1em .1em transparent; }
    10% { color: transparent; text-shadow: .1em .1em transparent; }
    20% { color: transparent; text-shadow: .1em .1em transparent; }
    30% { color: transparent; text-shadow: .1em .1em transparent; }
    40% { color: transparent; text-shadow: .1em .1em transparent; }
    50% { color: transparent; text-shadow: .1em .1em transparent; }
    100% { color: #c0d5f7;   text-shadow: .1em .1em #03132d;}
}
 
.blue { /*This property is to help hide the font when the screen loads */
  font-weight: bold;
  font-family: 'Annie Use Your Telescope', cursive;
  font-size: 2.3vh;
  -webkit-animation: color .7s ease-in-out;
  -moz-animation: color .7s ease-in-out;
   animation: color .7s ease-in-out;
  text-shadow: .2vh .2vh #03132d;
}

